<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    tools:context=".Activitys.ZomLayout">

    <ImageView
        android:id="@+id/btn_resetar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/container_fundo_branco_contorno_grosso"
        android:padding="15dp"
        android:src="@drawable/ic_resetar"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composable_zoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_resetar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linear_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/container_fundo_azul_2_contorno_grosso"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_auxiliar_1">

        <ImageView
            android:id="@+id/text_zoom"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_zoom"
            android:padding="5dp"
            android:background="@drawable/container_fundo_azul_1_contorno_fino"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/btn_add_zoom"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_add"
            android:padding="5dp"
            android:background="@drawable/container_fundo_azul_1_contorno_fino"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/btn_sub_zoom"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sub"
            android:padding="5dp"
            android:background="@drawable/container_fundo_azul_1_contorno_fino"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/text_top_2"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/sugo_display"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/zoom_zoom_layout"
        app:layout_constraintBottom_toTopOf="@id/linear_2"
        app:layout_constraintStart_toStartOf="@id/linear_2"
        app:layout_constraintEnd_toEndOf="@id/linear_2"/>

    <View
        android:id="@+id/auxiliar_2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_auxiliar_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <View
            android:id="@+id/auxiliar_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/view_right"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:fontFamily="@font/sugo_display"
        android:gravity="center"
        android:text="@string/produto_zoom_layout"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/auxiliar_2"
        app:layout_constraintStart_toStartOf="@+id/auxiliar_2"
        app:layout_constraintTop_toBottomOf="@+id/auxiliar_2" />

    <TextView
        android:id="@+id/view_top"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/sugo_display"
        android:gravity="center"
        android:text="@string/virar_zoom_layout"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/auxiliar_2"
        app:layout_constraintStart_toEndOf="@+id/layout_auxiliar_1" />

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/container_fundo_azul_2_contorno_grosso"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_auxiliar_1">

        <ImageView
            android:id="@+id/text_font"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_font_zoom"
            android:padding="5dp"
            android:background="@drawable/container_fundo_azul_1_contorno_fino"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/btn_add_font"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_add"
            android:padding="5dp"
            android:background="@drawable/container_fundo_azul_1_contorno_fino"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/btn_sub_font"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sub"
            android:padding="5dp"
            android:background="@drawable/container_fundo_azul_1_contorno_fino"/>


    </LinearLayout>

    <TextView
        android:id="@+id/text_top_1"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/sugo_display"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/texto_zoom_layout"
        app:layout_constraintBottom_toTopOf="@id/linear_1"
        app:layout_constraintStart_toStartOf="@id/linear_1"
        app:layout_constraintEnd_toEndOf="@id/linear_1"
        />

    <TextView
        android:id="@+id/view_left"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:fontFamily="@font/sugo_display"
        android:gravity="center"
        android:text="@string/salvar_zoom_layout"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layout_auxiliar_1"
        app:layout_constraintStart_toStartOf="@id/layout_auxiliar_1"
        app:layout_constraintTop_toBottomOf="@id/layout_auxiliar_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sugo_display"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/altura_zoom_layout"
        android:layout_marginStart="10dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/linear_1"
        app:layout_constraintTop_toTopOf="@id/linear_1" />

    <View
        android:id="@+id/altura_view_1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_select"
        app:layout_constraintBottom_toTopOf="@+id/nome_view_3"
        app:layout_constraintStart_toEndOf="@+id/linear_1"
        app:layout_constraintTop_toTopOf="@+id/linear_1" />

    <TextView
        android:id="@+id/text_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sugo_display"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/largura_zoom_layout"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/linear_1"
        app:layout_constraintBottom_toBottomOf="@id/linear_1"/>

    <View
        android:id="@+id/largura_view_2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_select"
        app:layout_constraintTop_toBottomOf="@+id/nome_view_3"
        app:layout_constraintBottom_toBottomOf="@+id/linear_1"
        app:layout_constraintStart_toEndOf="@+id/linear_1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/sugo_display"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/nome_zoom_layout"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/linear_1"
        app:layout_constraintStart_toEndOf="@id/linear_1"
        app:layout_constraintTop_toTopOf="@id/linear_1" />

    <View
        android:id="@+id/nome_view_3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_select"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/linear_1"
        app:layout_constraintBottom_toBottomOf="@+id/linear_1"
        app:layout_constraintStart_toEndOf="@+id/linear_1" />

    <TextView
        android:id="@+id/view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Id"
        android:fontFamily="@font/sugo_display"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/id_view_4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_eye_1"
        android:layout_marginStart="10dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/view_id"
        app:layout_constraintTop_toTopOf="@id/view_id"
        app:layout_constraintBottom_toBottomOf="@id/view_id"/>

    <Switch
        android:id="@+id/switch_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>